commit after renaming repository and the file

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CS1CAssigment01</name>
+	<name>CS1CAssignment01</name>
 	<comment></comment>
 	<projects>
 	</projects>
